Added model class for RegisteredClient and its Repositories